<resources>
    <string-array name="prefix_options">
        <item>Miss</item>
        <item>Ms</item>
        <item>Mdm</item>
        <item>Mr</item>
        <item>Sir</item>
    </string-array>
    <string name="app_name">L04-Reservation</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="group_size">Group Size</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="reset">Reset</string>
    <string name="display_date">Pick a date\n</string>
    <string name="display_time">Pick a time</string>
    <string name="title">Title</string>
    <string name="reservationDnT">Pick a date and time that you would like to reserve:</string>
</resources>