<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinnerPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/prefix_options"
                android:hint="@string/title"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/editTextMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"/>

            <EditText
                android:id="@+id/editTextGroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_size"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservationDnT" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:text="@string/display_date"
                android:datePickerMode="spinner"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_time"
                android:timePickerMode="spinner"
                 />

            <RadioGroup
                android:id="@+id/radioGroupArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonSmoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking" />

                <RadioButton
                    android:id="@+id/radioButtonNonSmoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_smoking" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_reservation" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

